Edits and 1 more reference

--- a/Research Journal Tex/Research Journal.tex
+++ b/Research Journal Tex/Research Journal.tex
@@ -39,17 +39,23 @@ Researching the ways people use and feel about technology is important in order 
 This Research Journal will focus on the way certain research methods are used in researching human computer interaction with video games and other related software.
 
 \section{Surveys}
+Using surveys as a way to research HCI in games and other related software is a very popular research method and often gives back good valuable data as long as the right questions are asked and if the person doing the survey answers the questions truthfully.
 
-\subsection{Paper 1}
+\subsection{Paper 1 \cite{one}}
+In this paper they surveyed user acceptance towards current mobile HCI research practices and factors influencing the willingness to participate and to share information in research.
+This survey was done in order to get a better understanding of how users felt about smartphone applications collecting and sending data to the app creators.
 
+\subsection{Paper 2 \cite{two}}
+qklgrnpoqien
 
-\subsection{Paper 2}
+\subsection{Paper 3 \cite{three}}
+ubliubnuli
 
-\subsection{Paper 3}
-
-\subsection{thoughts on using surveys}
+\subsection{Conclusion on using surveys}
+Surveys are really helpful for research HCI and knowing how a user might interact with your game or related software.
 
 \section{A/B Testing}
+The A/B testing research method is great for testing specific features of a game or related software. You present a user with the slightly different versions of the same thing and see which version performs better depending on how the user interacts with it.
 
 \subsection{Paper 1}
 
@@ -57,20 +63,9 @@ This Research Journal will focus on the way certain research methods are used in
 
 \subsection{Paper 3}
 
-\subsection{thoughts on using A/B Testing}
+\subsection{Conclusion on using A/B Testing}
 
-\section{Heuristic Evaluation}
-
-\subsection{Paper 1}
-
-\subsection{Paper 2}
-
-\subsection{Paper 3}
-
-\subsection{thoughts on using Heuristic Evaluation}
-
-
-\section{Personal Thoughts}
+\section{Thoughts}
 
 \section{Conclusion}
 
