--- a/Research Journal Tex/references.bib
+++ b/Research Journal Tex/references.bib
@@ -1,14 +1,40 @@
-@article{one,
-author={L. Lingxin}, 
-booktitle={2015 8th International Conference on Intelligent Computation Technology and Automation (ICICTA)}, 
-title={Research on Vertex Deformation Algorithms of Character Animation Model}, 
-year={2015}, 
+@INPROCEEDINGS{one,
+author={L. Punchoojit and N. Hongwarittorrn}, 
+booktitle={2014 International Computer Science and Engineering Conference (ICSEC)}, 
+title={The Ethics of computer research: A survey of user acceptance towards mobile HCI research practices and factor influencing the willingness to participate and to share information in research}, 
+year={2014}, 
 volume={}, 
 number={}, 
-pages={797-800}, 
-keywords={computer animation;matrix algebra;collapse effect;dual quaternion algorithm;integral solution;matrix linear hybrid algorithm;morph algorithm;programmable graph hardware technology;real-time character animation model;skeleton animation structure;skeleton animation technology;vertex deformation algorithms;wrapping paper effect;Algorithm design and analysis;Animation;Graphics processing units;Quaternions;Rendering (computer graphics);Skeleton;Transforms;DLB;character animation;dual quaternion;skeleton;vertex deformation}, 
-doi={10.1109/ICICTA.2015.202}, 
+pages={383-388}, 
+keywords={ethical aspects;human computer interaction;mobile computing;user acceptance;mobile HCI research practices;mobile technology;ethical guideline;ethical loopholes;Human computer interaction;Mobile communication;Gold;Data collection;Ethics;Data privacy;Computer science;Ethics;moral;survey;user's perspective;research ethics;mobile HCI;HCI}, 
+doi={10.1109/ICSEC.2014.6978227}, 
 ISSN={}, 
-month={June},
+month={July}
 }
 
+@INPROCEEDINGS{two,
+author={B. Cowan and B. Kapralos}, 
+booktitle={2014 IEEE 14th International Conference on Advanced Learning Technologies}, 
+title={A Survey of Frameworks and Game Engines for Serious Game Development}, 
+year={2014}, 
+volume={}, 
+number={}, 
+pages={662-664}, 
+keywords={serious games (computing);game engines;serious game development;entertainment-based game development tools;game frameworks;Games;Engines;Libraries;Entertainment industry;Databases;Google;Second Life;serious games;game engine;framework;review}, 
+doi={10.1109/ICALT.2014.194}, 
+ISSN={2161-3761}, 
+month={July}
+}
+
+@INPROCEEDINGS{three, 
+author={A. I. Wang}, 
+booktitle={2011 IEEE International Games Innovation Conference (IGIC)}, 
+title={Survey on how Norwegian teenagers play video games}, 
+year={2011}, 
+volume={}, 
+number={}, 
+pages={26-28}, 
+keywords={computer games;social aspects of automation;Norwegian teenagers;video games;game platform;mobile games;game genres;Games;Land mobile radio;Smart phones;Cities and towns;Computers}, 
+doi={10.1109/IGIC.2011.6115123}, 
+ISSN={2166-6741}, 
+month={Nov},}
