--- a/Research Journal Tex/Research Journal.tex
+++ b/Research Journal Tex/Research Journal.tex
@@ -28,7 +28,9 @@
 
 
 \section{Introduction}
-HCI or Human Computer Interaction, is the most important part in allowing humans to feel connected to whatever machine they are using. Good HCI can make a user feel immersed in using technology as if it was apart of them, an extension of themselves, bad HCI can make a user feel nauseated, angry or irritated, the way technology and computers are used nowadays is very important in making the user feel satisfied with what they are using.
+HCI or Human Computer Interaction, is the most important part in allowing humans to feel connected to whatever technological system they are using. Good HCI can make a user feel immersed in using technology as if it was apart of them, an extension of themselves. Bad HCI can make a user feel nauseated, angry or irritated.
+The way technology and computers are used nowadays is very important in making the user feel satisfied with what they are using.
+\\
 \\
 It is all about being as user-friendly as possible.
 \\
@@ -37,38 +39,89 @@ Researching the ways people use and feel about technology is important in order 
 
 \section{Research Journal Focus}
 This Research Journal will focus on the way certain research methods are used in researching human computer interaction with video games and other related software.
+\\
+It will compare two research methods and see how they've each been used in order to choose one to use for researching a game component of a game that is still very much in it's early stages of development.
+The research method will be useful for finding out if the game and it's components are fun and user friendly for the player.
 
 \section{Surveys}
 Using surveys as a way to research HCI in games and other related software is a very popular research method and often gives back good valuable data as long as the right questions are asked and if the person doing the survey answers the questions truthfully.
+\\
+\\
+Surveys are great because they can be conducted on many people thanks to survey websites such as SurveyMonkey, which allows you to create online surveys, it's quick and easy to set-up.
 
-\subsection{Paper 1 \cite{one}}
+\subsection{Paper 1: The Ethics of computer research: A survey of user acceptance towards mobile HCI research practices and factor influencing the willingness to participate and to share information in research \cite{one}}
 In this paper they surveyed user acceptance towards current mobile HCI research practices and factors influencing the willingness to participate and to share information in research.
-This survey was done in order to get a better understanding of how users felt about smartphone applications collecting and sending data to the app creators.
+The survey was done in order to get a better understanding of how users felt about smartphone applications collecting and sending data to the app creators to see if that changed the way they felt about using that specific app.
+\\
+\\
+They conducted the survey by sending it out online to peoples emails and by posting it out to social media, from doing that they got 114 respondents.
+In the survey they used a 5 point likert-scale, which is a scaling system to find out the way someone feels about something.
+\\
+In the end the survey was able to get them some valuable data to help them better understand how users felt about data collection.
 
-\subsection{Paper 2 \cite{two}}
-qklgrnpoqien
+\subsection{Paper 2: A Survey of Frameworks and Game Engines for Serious Game Development \cite{two}}
+In this paper they did research and a survey to find out which kinds of people used what types of games engines and frameworks for serious game development.
+\\
+The research was done in order to find out which game development engines and frameworks are most important for game developers for the best user experience in serious development.
+\\
+\\
+But they didn't survey people or game developers, instead they surveyed a search of game engines and frameworks that are popular among serious game developers and it was conducted by searching three databases: Google Scholar, ACM digital library, and the IEEE Xplore digital library, using search terms.
+\\
+\\
+This paper isn't very helpful as they aren't surveying actual game developers, but instead surveying other research papers about game development.
 
-\subsection{Paper 3 \cite{three}}
-ubliubnuli
+\subsection{Paper 3: Survey on how Norwegian teenagers play video games \cite{three}}
+This paper talks about how a survey was done to see how Norwegian teenagers play video games, how long they spend playing video games, what kind of games they play and on what platforms they play on.
+\\
+\\
+They surveyed 103 Norwegian teenagers in the ages of 14 to 16 years old, the survey had 3 sections asking, the first section was about playtime, asking the person how long they would play games for, the seconds section was about gaming platforms, asking about what platform the person would mainly play on, and the third section was about Game genres, asking the person what kind of games they would play.
+A lot of this was very analytical data, to figure out statistics to get averages on each section to see what answers came out on top.
+\\
+\\
+In the paper they say that "The results of the survey can be valuable input for developers that want to target teenagers as their primary users, and to see the different gaming patterns related to gender and time spent on playing games."
+This is a clear indication on HCI research as they want to figure out the way teenagers are interacting with computer games.
 
 \subsection{Conclusion on using surveys}
 Surveys are really helpful for research HCI and knowing how a user might interact with your game or related software.
 
 \section{A/B Testing}
-The A/B testing research method is great for testing specific features of a game or related software. You present a user with the slightly different versions of the same thing and see which version performs better depending on how the user interacts with it.
+The A/B testing research method is great for testing specific features of a game or related software. You present a user with slightly different versions of the same thing and see which version performs better depending on how the user interacts with it.
+\\
+\\
+A/B testing is very often used in web development to see what parts and features of website is most used by the visitors, by doing so they can then pick out the worst performing features and create a better website that hopefully gets more visitors.
 
-\subsection{Paper 1}
+\subsection{Paper 1 \cite{four}}
+In this paper they talk about how they conducted a series of A/B tests on internet flash games, seeing if selectively removing aesthetic improvements changed the play time, progress, and return rate of the players playing the games.
+\\
+\\
+This study is interesting as it poses the question of whether aesthetic visuals and sounds in a game are as important or more important than just gameplay.
+\\
+\\
+In the study they found that removing music
+and sound effects had no significant effect in either A/B tested games and that removing animations actually had the most impact on reducing player retention and playtime.
+This is interesting as it really shows that visuals are a lot more important than sound and music. 
 
-\subsection{Paper 2}
+\subsection{Paper 2 \cite{five}}
+This paper looks at A/B testing as a good way to evaluate what customers value.
+In the paper they explain how A/B testing has a few limitations, in order to get valuable result you need to test a mass amount of users, in the hundreds if possible and that the data needs to be collected in a reliable way.
 
-\subsection{Paper 3}
+
+\subsection{Paper 3 \cite{six}}
+In this paper they look into how feasible it is to carry out A/B tests for a multimedia application
+through Amazon’s crowdsourcing platform Mechanical Turk.
+The main aim of their testing was to test an application's user interface.
+The paper shows that it is feasible and affordable to do large scale A/B testing with many users through the use of Mechanical Turk.
 
 \subsection{Conclusion on using A/B Testing}
-
-\section{Thoughts}
+A/B testing is a very good way to test and research HCI, but it might not be the most convenient or easy way. A/B testing takes a lot work as you need to build and test multiple different versions of the same product, which is bad if you don't have enough time or funding to complete a project.
+\\
+The best uses for A/B testing is for projects that have a lot of funding and can easily be deployed to many users at the same time. It's really meant for projects done by big companies that have the available resources to accomplish large scale testing.
 
 \section{Conclusion}
-
+To conclude on this research journal and the comparison of these 2 research methods for a game component: Surveys would be a very cheap, easy and practical way of testing in development features and components of a game, surveys can easily be made online for free and can be sent and or given to testers to fill in, the surveys don't have to take up much time for the user to fill in and anyone could do it, as for A/B testing on the other hand is a lot less practical for testing in development features of a game as it requires a lot more testers, to test different versions of a game with different features or elements, which would require more work to create and set up for the users testing them, it's overall a longer and more time consuming way of researching HCI in games development, but it could be great if used by a big games companies that would have the budget and time to test it out.
+\\
+\\
+Surveys will be a superior HCI research method for for small in development games.
 
 \bibliography{references}
 \bibliographystyle{ieeetran}
