--- a/Research Journal Tex/references.bib
+++ b/Research Journal Tex/references.bib
@@ -38,3 +38,52 @@ keywords={computer games;social aspects of automation;Norwegian teenagers;video 
 doi={10.1109/IGIC.2011.6115123}, 
 ISSN={2166-6741}, 
 month={Nov},}
+
+@inproceedings{four,
+ author = {Andersen, Erik and Liu, Yun-En and Snider, Rich and Szeto, Roy and Popovi\'{c}, Zoran},
+ title = {Placing a Value on Aesthetics in Online Casual Games},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '11},
+ year = {2011},
+ isbn = {978-1-4503-0228-9},
+ location = {Vancouver, BC, Canada},
+ pages = {1275--1278},
+ numpages = {4},
+ url = {http://doi.acm.org.ezproxy.falmouth.ac.uk/10.1145/1978942.1979131},
+ doi = {10.1145/1978942.1979131},
+ acmid = {1979131},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {a/b testing, aesthetics, analytics, games},
+}
+
+@inproceedings{five,
+author={P. Hynninen and M. Kauppinen}, 
+booktitle={2014 IEEE 1st International Workshop on Requirements Engineering and Testing (RET)}, 
+title={A/B testing: A promising tool for customer value evaluation}, 
+year={2014}, 
+volume={}, 
+number={}, 
+pages={16-17}, 
+keywords={formal specification;Internet;marketing;program testing;A-B testing;customer value evaluation;Web-development;requirements engineering process;qualitative user research;Testing;Measurement;Companies;Games;Software;Context;Media}, 
+doi={10.1109/RET.2014.6908673}, 
+ISSN={}, 
+month={Aug},}
+
+@inproceedings{six,
+ author = {Vliegendhart, Raynor and Dolstra, Eelco and Pouwelse, Johan},
+ title = {Crowdsourced User Interface Testing for Multimedia Applications},
+ booktitle = {Proceedings of the ACM Multimedia 2012 Workshop on Crowdsourcing for Multimedia},
+ series = {CrowdMM '12},
+ year = {2012},
+ isbn = {978-1-4503-1589-0},
+ location = {Nara, Japan},
+ pages = {21--22},
+ numpages = {2},
+ url = {http://doi.acm.org.ezproxy.falmouth.ac.uk/10.1145/2390803.2390813},
+ doi = {10.1145/2390803.2390813},
+ acmid = {2390813},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {a/b testing, crowdsourcing, usability study},
+} 
